# yolov3_mobilenet_caffe

./: .gitignore  CMakeLists.txt  demo_yolov3.sh  demo_yolov3_trafficlight.sh  readme.md
include/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
models/yolov3/: mobilenet_yolov3_deploy.prototxt  mobilenet_yolov3_trafficlight_deploy.prototxt  mobilenet_yolov3_trafficlight_solver.prototxt  mobilenet_yolov3_trafficlight_test.prototxt  mobilenet_yolov3_trafficlight_train.prototxt  mobilenet_yolov3_train.prototxt
src/: yolo_det_trafficlight.cpp  yolo_det_voc.cpp
